ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceMaster__c/InsuranceMaster__c.object-meta.xml
<CustomObject>
    <label>Insurance Master</label>
    <nameField>
        <label>Insurance Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>