ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceMaster__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <length>2</length>
    <type>Text</type>
</CustomField>