ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceMaster__c/fields/Ins_Product__c.field-meta.xml
<CustomField>
    <fullName>Ins_Product__c</fullName>
    <label>Ins Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>