ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceMaster__c/fields/Insurance_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Code__c</fullName>
    <externalId>true</externalId>
    <label>Insurance Company Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>