ProdIND/ProdPrograms/force-app/main/default/objects/InsuranceMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Insurance_Company_Code__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Ins_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>